# coockiecutter-python

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: pyproject.toml
