[tool.poetry]
name = "{{cookiecutter.repo_name|replace('-', '_')|lower}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["Ashton Sidhu <ashton.sidhu1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "5.10.1"
black = "21.11.b1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
